fix: 群聊昵称显示的bug