@@ -168,7 +168,7 @@ public class PrivateMessageServiceImpl extends ServiceImpl<PrivateMessageMapper,
             IMPrivateMessage<PrivateMessageVO> sendMessage = new IMPrivateMessage<>();
             sendMessage.setSender(new IMUserInfo(m.getSendId(), IMTerminalType.WEB.code()));
             sendMessage.setRecvId(session.getUserId());
-            sendMessage.setRecvTerminals(Arrays.asList(session.getTerminal()));
+            sendMessage.setRecvTerminals(List.of(session.getTerminal()));
             sendMessage.setSendToSelf(false);
             sendMessage.setData(vo);
             sendMessage.setSendResult(true);
@@ -234,10 +234,10 @@ public class PrivateMessageServiceImpl extends ServiceImpl<PrivateMessageMapper,
         PrivateMessageVO msgInfo = new PrivateMessageVO();
         msgInfo.setType(MessageType.LOADING.code());
         msgInfo.setContent(isLoadding.toString());
-        IMPrivateMessage sendMessage = new IMPrivateMessage<>();
+        IMPrivateMessage<PrivateMessageVO> sendMessage = new IMPrivateMessage<>();
         sendMessage.setSender(new IMUserInfo(session.getUserId(), session.getTerminal()));
         sendMessage.setRecvId(session.getUserId());
-        sendMessage.setRecvTerminals(Arrays.asList(session.getTerminal()));
+        sendMessage.setRecvTerminals(List.of(session.getTerminal()));
         sendMessage.setData(msgInfo);
         sendMessage.setSendToSelf(false);
         sendMessage.setSendResult(false);
